package com.mvc.userservice.enums;

public enum KycDocumentStatus {
    SUBMITTED,
    APPROVED,
    UNDER_REVIEW,
    REJECTED,
    EXPIRED
}
