package com.mvc.userservice.enums;

public enum KycStatus {
    PENDING,
    IN_REVIEW,
    APPROVED,
    REJECTED
}
