package com.mvc.userservice.enums;

public enum UserRole {
    Admin,
    Agent,
    Client
}
